# wdk-z3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yaml
.local-tests/wdk7-compile/: CMakeLists.txt  compile.c  compile.cpp  run.ps1
cmake/: Config.cmake.in
include/: stdbool.h  stdint.h  z3_version.h
lib/amd64/: z3.lib
lib/i386/: z3.lib
